<!DOCTYPE resources [

    <!ENTITY host "http://10.0.2.2">
    <!ENTITY folder "myselfkid">
    ]>



<resources>
    <string name="app_name">SelfMadeKid</string>
    <string name="child_select">Выбор ребенка</string>
    <string name="info">Подробности</string>
    <string name="child_schedule">Рассписание</string>
    <string name="title_notifications">Уведомления</string>
    <string name="enter_text">Войти как</string>
    <string name="parent">Родитель</string>
    <string name="child">Ребенок</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Пароль</string>

    <string name="prompt_password_repeat">Повторите пароль</string>


    <string name="task_name">Название задачи</string>
    <string name="one_time_task">Разовая</string>
    <string name="repetitive_task">Повторяющаяся</string>

    <string name="action_sign_in">Вход</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Sign up</string>

    <string name="error_invalid_email">Неправильный Email адресс</string>
    <string name="error_invalid_password">Пароль слишком короткий</string>
    <string name="error_incorrect_password">Неверный пароль</string>
    <string name="error_field_required">Это обязательное поле</string>
    <string name="passwords_must_be_the_same">Пароли не совпадают</string>
    <!--logic in TaskRecyclerAdapter-->
    <string name="task_duration_1">%1$d часов</string>
    <string name="task_duration_2">%1$d час</string>
    <string name="task_duration_3">%1$d часа</string>

    <string name="enter_points_count">Введите количество баллов за задачу</string>

    <string name="registration">Регистрация</string>
    <string name="task_type">Тип задачи</string>
    <string name="choose_day">Веберите день</string>

    <string name="date">Дата</string>
    <string name="time_to_start">Время начала</string>
    <string name="Duration">Продолжительность</string>

    <string-array name="custom_months">
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </string-array>

    <string-array name="custom_days_of_the_week">
        <item>пн</item>
        <item>вт</item>
        <item>ср</item>
        <item>чт</item>
        <item>пт</item>
        <item>сб</item>
        <item>вс</item>
    </string-array>

    <string name="monday_short">пн</string>
    <string name="tuesday_short">вт</string>
    <string name="wednesday_short">ср</string>
    <string name="thursday_short">чт</string>
    <string name="friday_short">пт</string>
    <string name="saturday_short">cб</string>
    <string name="sunday_short">вс</string>

    <string name="display_time">%1$d:%2$02d</string>
    <string name="display_date">%1$d.%2$02d.%3$04d</string>
    <string name="ok">OK</string>
    <string name="abort">Отмена</string>
    <string name="points">Баллов</string>
    <string name="point_count_to_end_task">Количество баллов за задание</string>
    <string name="deadline_time">Время дедлайна</string>
    <string name="deadline_date">Дата дедлайна</string>
    <string name="add_button">Добавить</string>
    <string name="choose_at_least_one_day">Выберете хотя бы один день</string>
    <string name="enter_points_amount">Введите количство баллов</string>
    <string name="one_time_tasks">Разовые задачи</string>
    <string name="do_until_date">До %1$d.%2$02d.%3$04d</string>
    <string name="enter_deadline_time_and_date">Выберете дату и время дедлайна</string>
    <string name="enter_date_after_now">Выберете дату позднее настоящей</string>
    <string name="child_have_not_added_goal">Цель не добавлена</string>
    <string name="goal_progress_bar_as_text">%1$d/%2$d</string>
    <string name="add_new_child">Добавить нового ребенка</string>
    <string name="first_name">Имя</string>
    <string name="second_name">Фамилия</string>
    <string name="patronymic">Отчество</string>
    <string name="name_title">Название</string>






    <string name="register_script">&host;/&folder;/register.php</string>
    <string name="login_script">&host;/&folder;/login.php</string>
    <string name="add_child_script">&host;/&folder;/add_child.php</string>
    <string name="get_children_script">&host;/&folder;/getchildren.php</string>
    <string name="get_child_data">&host;/&folder;/get_child_data.php</string>
    <string name="add_goal_script">&host;/&folder;/add_goal.php</string>
    <string name="add_one_time_task">&host;/&folder;/add_one_time_task.php</string>
    <string name="get_goal">&host;/&folder;/get_goal.php</string>
    <string name="get_tasks">&host;/&folder;/get_tasks.php</string>
    <string name="add_repetitive_task">&host;/&folder;/add_repetitive_task.php</string>
    <string name="get_repetitive_id">&host;/&folder;/get_repetitive_id.php</string>
    <string name="update_goal_points">&host;/&folder;/update_goal_points.php</string>
    <string name="check_one_time_task">&host;/&folder;/check_one_time_task.php</string>
    <string name="check_repetitive_task">&host;/&folder;/check_repetitive_task.php</string>
    <string name="get_checked_repetitive_tasks">&host;/&folder;/get_checked_repetitive_tasks.php</string>
    <string name="update_token">&host;/&folder;/update_token.php</string>
    <string name="remove_goal">&host;/&folder;/remove_goal.php</string>
    <string name="get_finished_goals">&host;/&folder;/get_finished_goals.php</string>
    <string name="send_tokens">&host;/&folder;/send_tokens.php</string>
    <string name="send_money_to_friend">&host;/&folder;/send_money_to_friend.php</string>
    <string name="add_exist_child">&host;/&folder;/add_exist_child.php</string>


    <string name="current_goal">Текущая цель</string>
    <string name="default_notification_channel_id" translatable="false"> fcm_default_channel</string>
    <string name="task_confirmed_by_parent">Задача подтверждена родителем</string>
    <string name="child_finished_task">Ребенок выполнил задачу</string>
    <string name="child_have_been_adde_goal">Ребенок добавил цель</string>
    <string name="parent_confirmed_goal">Родитель подтвердил цель</string>
    <string name="achievements">Достижения</string>
    <string name="points_name">Селфики</string>
    <string name="points_name_on_count">Селфиков</string>
    <string name="about_child">О ребенке</string>
    <string name="goal_label">Цель</string>
    <string name="encourage_with_money">Поощрить селфиками</string>
    <string name="amount">Количество</string>
    <string name="send_selfies_label">Введите количество селфиков </string>
    <string name="share_money">Поделиться селфиками</string>
    <string name="receiver_email">Email получателя</string>
    <string name="not_enouth_money">У вас недостаточно селфиков</string>
    <string name="no_such_user">Такого пользователья не существует</string>
    <string name="create_goal">Создайте цель</string>
    <string name="confirm_task_action">Подтвердите цель</string>
    <string name="not_confirmed">Не подтверждена</string>
    <string name="not_created">Не создана</string>
    <string name="child_already_registered">Ребенок уже зарегистрирован</string>
    <string name="new_child_registration">Регистрация новго ребенка</string>


</resources>
