<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddNewChildActivity"
    android:background="@color/backgroundColor">



    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/image_card_background"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="-10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:clickable="false"
        >



        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">



            <TextView
                android:id="@+id/text_switcher_login"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textColor="@color/textPrimaryColor"
                android:text="@string/add_new_child"
                android:gravity="center"

                app:autoSizeTextType="uniform"
                android:paddingBottom="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="sans-serif-condensed-medium"
                />
                <EditText
                    android:id="@+id/child_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName|textCapWords"
                    android:textColor="@color/textPrimaryColor"
                    android:background="@drawable/card_background"
                    android:backgroundTint="@color/backgroundColor"
                    android:textColorHint="@color/silverColor"
                    android:maxLines="1"
                    android:gravity="center"
                    android:singleLine="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="sans-serif-condensed-light"
                    android:layout_marginBottom="15dp"
                    />

                <EditText
                    android:id="@+id/second_name"
                    android:layout_width="match_parent"
                    android:textColor="@color/textPrimaryColor"
                    android:layout_height="50dp"
                    android:hint="@string/second_name"
                    android:textColorHint="@color/silverColor"
                    android:inputType="textPersonName|textCapWords"
                    android:backgroundTint="@color/backgroundColor"
                    android:maxLines="1"
                    android:background="@drawable/card_background"
                    android:gravity="center"
                    android:singleLine="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="sans-serif-condensed-light"
                    android:layout_marginBottom="15dp"
                    />
                <EditText
                    android:id="@+id/patronymic"
                    android:textColorHint="@color/silverColor"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/patronymic"
                    android:textColor="@color/textPrimaryColor"
                    android:inputType="textPersonName|textCapWords"
                    android:backgroundTint="@color/backgroundColor"
                    android:maxLines="1"
                    android:background="@drawable/card_background"
                    android:gravity="center"
                    android:singleLine="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="sans-serif-condensed-light"
                    android:layout_marginBottom="15dp"
                    />



            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColorHint="@color/silverColor"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:backgroundTint="@color/backgroundColor"
                android:maxLines="1"
                android:textColor="@color/textPrimaryColor"
                android:background="@drawable/card_background"
                android:gravity="center"
                android:singleLine="true"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="sans-serif-condensed-light"
                android:layout_marginBottom="15dp"
                />


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:imeOptions="actionUnspecified"
                android:textColorHint="@color/silverColor"
                android:inputType="textPassword"
                android:background="@drawable/card_background"
                android:textColor="@color/textPrimaryColor"
                android:backgroundTint="@color/backgroundColor"
                android:maxLines="1"

                android:gravity="center"
                android:singleLine="true"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="sans-serif-condensed-light"
                android:layout_marginBottom="15dp"
                />




            <EditText
                android:id="@+id/password_repeat"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/prompt_password_repeat"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_up_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:background="@drawable/card_background"
                android:textColor="@color/textPrimaryColor"
                android:backgroundTint="@color/backgroundColor"
                android:maxLines="1"
                android:gravity="center"
                android:textColorHint="@color/silverColor"
                android:singleLine="true"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="sans-serif-condensed-light"
                android:layout_marginBottom="30dp"
                />


            <Button
                android:id="@+id/add_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/add_button"
                android:textColor="@color/textSecondColor"
                android:onClick="attemptAdding"
                app:autoSizeTextType="uniform"
                android:textAllCaps="false"
                android:fontFamily="sans-serif-condensed-light"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:background="@drawable/button_background"
                android:layout_marginBottom="15dp"
                />


            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>
    </androidx.cardview.widget.CardView>
</androidx.appcompat.widget.LinearLayoutCompat>